# test-poetry-publish

./: README.rst  pyproject.toml
.github/workflows/: httpauth.yaml  options.yaml  poetry_install_options.yaml  pypi.yaml  subdirectory  subdirectory.yaml  test.yml  testpypi.yml  trusted-publisher.yaml
