[tool.poetry]
name = "test-poetry-publish"
version = "0.1.0"
description = ""
authors = ["Jelena Dokic <jelena.dokic@symphony.is>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
